2007-05-23  Tor Lillqvist  <tml@novell.com>

	* plug-ins/common/tiff-save.c (save_paths): Use memset() instead
	of bzero().

2007-05-23  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-user-install.c
	* app/core/gimpgradient-load.c
	* app/core/gimpsamplepoint.c
	* app/core/gimpscanconvert.c
	* app/core/gimpunit.c
	* app/display/gimpdisplayshell-filter-dialog.c
	* app/display/gimpdisplayshell-layer-select.c
	* app/display/gimpdisplayshell-scale.c
	* app/file/gimprecentitem.c
	* app/gui/splash.c: allocate structs using GSlice.

2007-05-23  Sven Neumann  <sven@gimp.org>

	* app/dialogs/tips-parser.c
	* app/display/gimpdisplayshell-autoscroll.c
	* app/display/gimpdisplayshell-selection.c
	* app/display/gimpstatusbar.c
	* app/menus/plug-in-menus.c
	* app/plug-in/gimpenvirontable.c
	* app/plug-in/gimpinterpreterdb.c
	* app/plug-in/gimpplugindebug.c
	* app/plug-in/gimppluginshm.c
	* app/text/gimptextundo.c: allocate structs using GSlice.

	* app/widgets/gimpselectiondata.c (gimp_selection_data_set_color):
	stack allocate tempory data.

2007-05-22  Sven Neumann  <sven@gimp.org>

	* app/core/gimppalette-import.c
	* app/core/gimppalette-load.c
	* app/core/gimppalette.c: use GSlice for palette entries and
	temporary structs.

2007-05-22  Sven Neumann  <sven@gimp.org>

	* app/base/siox.c: allocate structs using GSlice.

	* app/base/tile-swap.[ch]
	* app/xcf/xcf-load.c: removed dead code that used to deal with
	swapping from XCF files. Simplified swap file code quite a bit.

2007-05-22  Sven Neumann  <sven@gimp.org>

	* app/core/gimparea.[ch]
	* app/core/gimpprojection.c
	* app/display/gimpdisplay.c: use GSlice to allocate GimpArea and
	sanitize the API.

2007-05-22  Sven Neumann  <sven@gimp.org>

	* app/base/tile-manager.[ch]
	* app/base/tile-manager-private.h: removed unused code.

	* app/base/pixel-surround.c
	* app/base/pixel-region.c: allocate structs using GSlice.

	* app/base/tile.c: allocate TileLink and TileRowHint using GSlice.
