@@ -49,26 +49,25 @@
 #include "gimp-intl.h"
 
 
-typedef struct _TemplateDeleteData TemplateDeleteData;
-
-struct _TemplateDeleteData
+typedef struct
 {
   GimpContainer *container;
   GimpTemplate  *template;
-};
+} TemplateDeleteData;
 
 
 /*  local function prototypes  */
 
-static void   templates_new_response   (GtkWidget             *dialog,
-                                        gint                   response_id,
-                                        TemplateOptionsDialog *options);
-static void   templates_edit_response  (GtkWidget             *widget,
-                                        gint                   response_id,
-                                        TemplateOptionsDialog *options);
-static void   templates_delete_response (GtkWidget            *dialog,
-                                         gint                  response_id,
-                                         TemplateDeleteData   *delete_data);
+static void   templates_new_response     (GtkWidget             *dialog,
+                                          gint                   response_id,
+                                          TemplateOptionsDialog *options);
+static void   templates_edit_response    (GtkWidget             *widget,
+                                          gint                   response_id,
+                                          TemplateOptionsDialog *options);
+static void   templates_delete_response  (GtkWidget             *dialog,
+                                          gint                   response_id,
+                                          TemplateDeleteData    *delete_data);
+static void   templates_delete_data_free (TemplateDeleteData    *delete_data);
 
 
 /*  public functions */
@@ -89,10 +88,8 @@ templates_create_image_cmd_callback (GtkAction *action,
 
   if (template && gimp_container_have (container, GIMP_OBJECT (template)))
     {
-      GdkScreen *screen;
+      GdkScreen *screen = gtk_widget_get_screen (GTK_WIDGET (editor));
       GtkWidget *dialog;
-
-      screen = gtk_widget_get_screen (GTK_WIDGET (editor));
 
       dialog = gimp_dialog_factory_dialog_new (global_dialog_factory, screen,
                                                "gimp-image-new-dialog",
@@ -211,10 +208,8 @@ templates_delete_cmd_callback (GtkAction *action,
 
   if (template && gimp_container_have (container, GIMP_OBJECT (template)))
     {
-      TemplateDeleteData *delete_data;
-      GtkWidget           *dialog;
-
-      delete_data = g_new0 (TemplateDeleteData, 1);
+      TemplateDeleteData *delete_data = g_slice_new (TemplateDeleteData);
+      GtkWidget          *dialog;
 
       delete_data->container = container;
       delete_data->template  = template;
@@ -234,7 +229,9 @@ templates_delete_cmd_callback (GtkAction *action,
                                                GTK_RESPONSE_CANCEL,
                                                -1);
 
-      g_object_weak_ref (G_OBJECT (dialog), (GWeakNotify) g_free, delete_data);
+      g_object_weak_ref (G_OBJECT (dialog),
+                         (GWeakNotify) templates_delete_data_free, delete_data);
+
       g_signal_connect_object (template, "disconnect",
                                G_CALLBACK (gtk_widget_destroy),
                                dialog, G_CONNECT_SWAPPED);
@@ -305,4 +302,10 @@ templates_delete_response (GtkWidget          *dialog,
     }
 
   gtk_widget_destroy (dialog);
+}
+
+static void
+templates_delete_data_free (TemplateDeleteData *delete_data)
+{
+  g_slice_free (TemplateDeleteData, delete_data);
 }
